# speech-to-text

./: .gitignore  README.md  pyproject.toml
src/speech_to_text/: broker.py  main.py  module.py  topics.py
src/speech_to_text/modules/: inference.py  listener.py  logger.py  microphone.py
